--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "httpdispatcher": "*"
+    "httpdispatcher": "*",
+    "ejs": "*"
   }
 }
